--- a/app/partials/all.html
+++ b/app/partials/all.html
@@ -14,35 +14,35 @@
                         </span>
                     </span>
 
-                    <select data-ng-model="selectedParam" data-ng-options="param.display for param in params"></select>
+                    <select data-ng-model="all.selectedParam" data-ng-options="param.display for param in all.params"></select>
                 </div>
             </div>
         </div>
-        <div data-ng-show="error">{{errorMessage}}</div>
-        <a class="ui-btn ui-btn-inline ui-shadow ui-btn-corner-all ui-btn-up-b" disable-link="" data-ng-click="cancel()" data-ng-hide="loading">
+        <div data-ng-show="all.error">{{all.errorMessage}}</div>
+        <a class="ui-btn ui-btn-inline ui-shadow ui-btn-corner-all ui-btn-up-b" disable-link="" data-ng-click="all.cancel()" data-ng-hide="all.loading">
             <span class="ui-btn-inner ui-btn-corner-all">
                 <span class="ui-btn-text">
                     Cancel
                 </span>
             </span>
         </a>
-        <a class="ui-btn ui-btn-inline ui-shadow ui-btn-corner-all ui-btn-up-b" disable-link="" data-ng-click="remove()" data-ng-hide="loading || confirming">
+        <a class="ui-btn ui-btn-inline ui-shadow ui-btn-corner-all ui-btn-up-b" disable-link="" data-ng-click="all.remove()" data-ng-hide="all.loading || all.confirming">
             <span class="ui-btn-inner ui-btn-corner-all">
                 <span class="ui-btn-text">
                     Remove
                 </span>
             </span>
         </a>
-        <div class="ui-field-contain ui-body ui-br" data-ng-show="confirming">
+        <div class="ui-field-contain ui-body ui-br" data-ng-show="all.confirming">
             <label for="param" class="select ui-select">Confirm Removal:</label>
         </div>
-        <a class="ui-btn ui-btn-inline ui-shadow ui-btn-corner-all ui-btn-up-b" disable-link="" data-ng-click="confirmRemove()" data-ng-show="confirming && !loading">
+        <a class="ui-btn ui-btn-inline ui-shadow ui-btn-corner-all ui-btn-up-b" disable-link="" data-ng-click="all.confirmRemove()" data-ng-show="all.confirming && !all.loading">
             <span class="ui-btn-inner ui-btn-corner-all">
                 <span class="ui-btn-text">
                     Remove
                 </span>
             </span>
         </a>
-        <img src="img/progress-indeterminate-ring-light-small.gif" data-ng-show="loading"/>
+        <img src="img/progress-indeterminate-ring-light-small.gif" data-ng-show="all.loading"/>
     </div>
 </div>
