Fix regression introduced by controllerAs change

--- a/app/partials/all.html
+++ b/app/partials/all.html
@@ -9,7 +9,7 @@
             <div class="ui-select">
                 <div class="ui-btn ui-btn-up-b ui-shadow ui-btn-corner-all ui-fullsize ui-btn-block ui-btn-icon-right">
                     <span class="ui-btn-inner ui-btn-corner-all">
-                        <span class="ui-btn-text">{{selectedParam.display}}</span>
+                        <span class="ui-btn-text">{{all.selectedParam.display}}</span>
                         <span class="ui-icon ui-icon-arrow-d ui-icon-shadow">
                         </span>
                     </span>
