--- a/app/partials/generation.html
+++ b/app/partials/generation.html
@@ -57,7 +57,7 @@
                     <div class="ui-select">
                         <div class="ui-btn ui-btn-up-b ui-shadow ui-btn-corner-all ui-fullsize ui-btn-block ui-btn-icon-right">
                             <span class="ui-btn-inner ui-btn-corner-all">
-                                <span class="ui-btn-text">{{passwordLength}}</span>
+                                <span class="ui-btn-text">{{generation.passwordLength}}</span>
                                 <span class="ui-icon ui-icon-arrow-d ui-icon-shadow">
                                 </span>
                             </span>
@@ -100,7 +100,7 @@
                         <span data-ng-style="generation.symbolOnStyle" role="img" class="ui-slider-label ui-slider-label-a ui-btn-active ui-btn-corner-all">On</span>
                         <span data-ng-style="generation.symbolOffStyle" role="img" class="ui-slider-label ui-slider-label-b ui-btn-down-b ui-btn-corner-all">Off</span>
                         <div class="ui-slider-inneroffset">
-                            <a data-ng-style="generation.symbolHandleStyle" aria-labelledby="symbol-label" aria-valuenow="{{symbolSelection}}" aria-valuemax="1" aria-valuemin="0" role="slider" class="ui-slider-handle ui-btn ui-btn-up-b ui-shadow ui-btn-corner-all ui-slider-handle-snapping ui-btn-up-b" disable-link="">
+                            <a data-ng-style="generation.symbolHandleStyle" aria-labelledby="symbol-label" aria-valuenow="{{generation.symbolSelection}}" aria-valuemax="1" aria-valuemin="0" role="slider" class="ui-slider-handle ui-btn ui-btn-up-b ui-shadow ui-btn-corner-all ui-slider-handle-snapping ui-btn-up-b" disable-link="">
                                 <span class="ui-btn-inner ui-btn-corner-all">
                                     <span class="ui-btn-text"></span>
                                 </span>
@@ -119,7 +119,7 @@
                         <span data-ng-style="generation.newPasswordOnStyle" role="img" class="ui-slider-label ui-slider-label-a ui-btn-active ui-btn-corner-all">On</span>
                         <span data-ng-style="generation.newPasswordOffStyle" role="img" class="ui-slider-label ui-slider-label-b ui-btn-down-b ui-btn-corner-all">Off</span>
                         <div class="ui-slider-inneroffset">
-                            <a data-ng-style="generation.newPasswordHandleStyle" aria-labelledby="symbol-label" aria-valuenow="{{newPasswordSelection}}" aria-valuemax="1" aria-valuemin="0" role="slider" class="ui-slider-handle ui-btn ui-btn-up-b ui-shadow ui-btn-corner-all ui-slider-handle-snapping ui-btn-up-b" disable-link="">
+                            <a data-ng-style="generation.newPasswordHandleStyle" aria-labelledby="symbol-label" aria-valuenow="{{generation.newPasswordSelection}}" aria-valuemax="1" aria-valuemin="0" role="slider" class="ui-slider-handle ui-btn ui-btn-up-b ui-shadow ui-btn-corner-all ui-slider-handle-snapping ui-btn-up-b" disable-link="">
                                 <span class="ui-btn-inner ui-btn-corner-all">
                                     <span class="ui-btn-text"></span>
                                 </span>
